--- a/qt-lib/pom.xml
+++ b/qt-lib/pom.xml
@@ -54,6 +54,13 @@
 			<scope>provided</scope>
 		</dependency>
 
+		
+		<dependency>
+    			<groupId>org.json</groupId>
+    			<artifactId>json</artifactId>
+    			<version>20140107</version>
+		</dependency>
+
 
 	</dependencies>
 	<build>
