--- a/qt-lib/pom.xml
+++ b/qt-lib/pom.xml
@@ -34,11 +34,25 @@
 			<version>3.0.0</version>
 		</dependency>
 
+<dependency>
+    <groupId>commons-lang</groupId>
+    <artifactId>commons-lang</artifactId>
+    <version>2.6</version>
+</dependency>
+
+<dependency>
+    <groupId>commons-io</groupId>
+    <artifactId>commons-io</artifactId>
+    <version>2.5</version>
+</dependency>
+
+
+
 		<dependency>
 			<groupId>org.apache.storm</groupId>
 			<artifactId>storm-core</artifactId>
-			<version>0.9.3</version>
-			<scope>provided</scope>
+			<version>1.0.3</version>
+<scope>provided</scope>
 		</dependency>
 
 		<dependency>
@@ -51,16 +65,14 @@
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>18.0</version>
-			<scope>provided</scope>
 		</dependency>
 
-		
+	
 		<dependency>
     			<groupId>org.json</groupId>
     			<artifactId>json</artifactId>
     			<version>20140107</version>
-		</dependency>
-
+		</dependency>	
 
 	</dependencies>
 	<build>
