--- a/qt-lib/pom.xml
+++ b/qt-lib/pom.xml
@@ -35,15 +35,15 @@
 		</dependency>
 
 		<dependency>
-		    <groupId>commons-lang</groupId>
-		    <artifactId>commons-lang</artifactId>
-		    <version>2.6</version>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.6</version>
 		</dependency>
 
 		<dependency>
-		    <groupId>commons-io</groupId>
-		    <artifactId>commons-io</artifactId>
-		    <version>2.5</version>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.5</version>
 		</dependency>
 
 		<dependency>
@@ -65,12 +65,52 @@
 			<version>18.0</version>
 		</dependency>
 
-	
 		<dependency>
-    			<groupId>org.json</groupId>
-    			<artifactId>json</artifactId>
-    			<version>20140107</version>
-		</dependency>	
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20140107</version>
+		</dependency>
+
+		<dependency>
+    		<groupId>org.apache.kafka</groupId>
+    		<artifactId>kafka_2.11</artifactId>
+    		<version>0.10.2.1</version>
+		</dependency>
+		
+
+   <dependency>
+      <groupId>com.ameliant.tools</groupId>
+      <artifactId>tools-support</artifactId>
+      <version>0.1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>com.ameliant.tools</groupId>
+      <artifactId>zookeeper-test-dsl</artifactId>
+      <version>0.1.0-SNAPSHOT</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.ameliant.tools</groupId>
+      <artifactId>kafka-test-dsl</artifactId>
+      <version>0.1.0-SNAPSHOT</version>
+      		<scope>system</scope>
+      		<systemPath>${basedir}/lib/kafka-test-dsl-0.1.0-SNAPSHOT.jar</systemPath>
+    </dependency>
+  
+     		<dependency>
+			<groupId>com.ameliant.tools</groupId>
+			<artifactId>kafka-perf-tool</artifactId>
+			<version>0.1.0-SNAPSHOT</version>
+      		<scope>system</scope>
+      		<systemPath>${basedir}/lib/kafka-perf-tool.jar</systemPath>  
+<!--	<systemPath>/home/gcasale/Dropbox/code/ameliant-tools.git/trunk/kafka/kafka-perf-tool/target/kafka-perf-tool.jar</systemPath> -->
+    	</dependency>
+    			
+    			<dependency>
+    <groupId>org.apache.kafka</groupId>
+    <artifactId>kafka-clients</artifactId>
+    <version>0.10.2.1</version>
+</dependency>
 	</dependencies>
 
 	<build>
