--- a/qt-lib/pom.xml
+++ b/qt-lib/pom.xml
@@ -2,13 +2,21 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>qt-lib</groupId>
+	<groupId>com.github.dice-project</groupId>
 	<artifactId>qt-lib</artifactId>
 	<version>1.0.0</version>
 	<packaging>jar</packaging>
 
 	<name>qt-lib</name>
-	<url>http://maven.apache.org</url>
+	<url>https://github.com/dice-project/DICE-Quality-Testing/wiki</url>
+
+	<licenses>
+		<license>
+			<name>Apache License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -102,8 +110,8 @@
 			<artifactId>kafka-perf-tool</artifactId>
 			<version>0.1.0-SNAPSHOT</version>
       		<scope>system</scope>
-      		<systemPath>${basedir}/lib/kafka-perf-tool.jar</systemPath>  
-<!--	<systemPath>/home/gcasale/Dropbox/code/ameliant-tools.git/trunk/kafka/kafka-perf-tool/target/kafka-perf-tool.jar</systemPath> -->
+<!--      		<systemPath>${basedir}/lib/kafka-perf-tool.jar</systemPath>  -->
+	<systemPath>/home/gcasale/Dropbox/code/ameliant-tools.git/trunk/kafka/kafka-perf-tool/target/kafka-perf-tool.jar</systemPath> 
     	</dependency>
     			
     			<dependency>
