--- a/qt-lib/pom.xml
+++ b/qt-lib/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.github.dice-project</groupId>
 	<artifactId>qt-lib</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.1</version>
 	<description>DICE Quality Testing tool</description>
 	<packaging>jar</packaging>
 
@@ -43,18 +43,6 @@
         </developer>
     </developers>
 
-<!---
-<distributionManagement>
-  <snapshotRepository>
-    <id>ossrh</id>
-    <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-  </snapshotRepository>
-  <repository>
-    <id>ossrh</id>
-    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-  </repository>
-</distributionManagement>
--->
 <distributionManagement>
   <snapshotRepository>
     <id>ossrh</id>
@@ -146,7 +134,7 @@
       <artifactId>kafka-test-dsl</artifactId>
       <version>0.1.0-SNAPSHOT</version>
       		<scope>system</scope>
-      		<systemPath>${basedir}/lib/kafka-test-dsl-0.1.0-SNAPSHOT.jar</systemPath>
+      		<systemPath>${project.basedir}/lib/kafka-test-dsl-0.1.0-SNAPSHOT.jar</systemPath>
     </dependency>
   
      		<dependency>
@@ -154,8 +142,7 @@
 			<artifactId>kafka-perf-tool</artifactId>
 			<version>0.1.0-SNAPSHOT</version>
       		<scope>system</scope>
-<!--      		<systemPath>${basedir}/lib/kafka-perf-tool.jar</systemPath>  -->
-	<systemPath>/home/gcasale/Dropbox/code/ameliant-tools.git/trunk/kafka/kafka-perf-tool/target/kafka-perf-tool.jar</systemPath> 
+      		<systemPath>${project.basedir}/lib/kafka-perf-tool.jar</systemPath> 
     	</dependency>
     			
     			<dependency>
@@ -166,6 +153,7 @@
 	</dependencies>
 
 	<build>
+		<sourceDirectory>src/main/</sourceDirectory>
 		<resources>
 			<resource>
 				<directory>src/resources</directory>
@@ -207,7 +195,7 @@
 					</descriptorRefs>
 					<archive>
 						<manifest>
-							<mainClass>com.github.dice-project.qt.examples.ExclamationTopology</mainClass>
+							<mainClass>com.github.dice_project.qt.examples.KafkaRateSpout</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
@@ -234,18 +222,6 @@
 			        </execution>
  			       </executions>
  		      </plugin>
-<!--
-  <plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-release-plugin</artifactId>
-    <version>2.5.3</version>
-    <configuration>
-    <mavenExecutorId>forked-path</mavenExecutorId>
-    <useReleaseProfile>false</useReleaseProfile>
-    <arguments>-Psonatype-oss-release</arguments>
-    </configuration>
-    </plugin>
--->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -279,19 +255,40 @@
         </execution>
       </executions>
     </plugin>
-    <plugin>
+<plugin>
       <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-javadoc-plugin</artifactId>
-      <version>2.9.1</version>
-      <executions>
-        <execution>
-          <id>attach-javadocs</id>
-          <goals>
-            <goal>jar</goal>
-          </goals>
-        </execution>
-      </executions>
-    </plugin>
+            <artifactId>maven-jar-plugin</artifactId>
+            <executions>
+                <execution>
+                    <id>empty-javadoc-jar</id>
+                    <phase>deploy</phase>
+                    <goals>
+                        <goal>jar</goal>
+                    </goals>
+                    <configuration>
+                        <classifier>javadoc</classifier>
+                        <classesDirectory>${basedir}/javadoc</classesDirectory>
+                    </configuration>
+                </execution>
+            </executions>
+        </plugin>
+ 	<plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <executions>
+                <execution>
+                    <id>empty-javadoc-jar</id>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>jar</goal>
+                    </goals>
+                    <configuration>
+                        <classifier>javadoc</classifier>
+                        <classesDirectory>${basedir}/javadoc</classesDirectory>
+                    </configuration>
+                </execution>
+            </executions>
+        </plugin>
 		</plugins>
 	</build>
 
